@@ -1,1 +1,0 @@
-Python library for working with CouchDB.
