@@ -1,89 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2014/06/30 14:25:40 joerg Exp $
-bin/couchdb-dump${PYVERSSUFFIX}
-bin/couchdb-load${PYVERSSUFFIX}
-bin/couchdb-replicate${PYVERSSUFFIX}
-bin/couchpy${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/${EGG_INFODIR}/zip-safe
-${PYSITELIB}/couchdb/__init__.py
-${PYSITELIB}/couchdb/__init__.pyc
-${PYSITELIB}/couchdb/__init__.pyo
-${PYSITELIB}/couchdb/client.py
-${PYSITELIB}/couchdb/client.pyc
-${PYSITELIB}/couchdb/client.pyo
-${PYSITELIB}/couchdb/design.py
-${PYSITELIB}/couchdb/design.pyc
-${PYSITELIB}/couchdb/design.pyo
-${PYSITELIB}/couchdb/http.py
-${PYSITELIB}/couchdb/http.pyc
-${PYSITELIB}/couchdb/http.pyo
-${PYSITELIB}/couchdb/json.py
-${PYSITELIB}/couchdb/json.pyc
-${PYSITELIB}/couchdb/json.pyo
-${PYSITELIB}/couchdb/mapping.py
-${PYSITELIB}/couchdb/mapping.pyc
-${PYSITELIB}/couchdb/mapping.pyo
-${PYSITELIB}/couchdb/multipart.py
-${PYSITELIB}/couchdb/multipart.pyc
-${PYSITELIB}/couchdb/multipart.pyo
-${PYSITELIB}/couchdb/tests/__init__.py
-${PYSITELIB}/couchdb/tests/__init__.pyc
-${PYSITELIB}/couchdb/tests/__init__.pyo
-${PYSITELIB}/couchdb/tests/__main__.py
-${PYSITELIB}/couchdb/tests/__main__.pyc
-${PYSITELIB}/couchdb/tests/__main__.pyo
-${PYSITELIB}/couchdb/tests/client.py
-${PYSITELIB}/couchdb/tests/client.pyc
-${PYSITELIB}/couchdb/tests/client.pyo
-${PYSITELIB}/couchdb/tests/couch_tests.py
-${PYSITELIB}/couchdb/tests/couch_tests.pyc
-${PYSITELIB}/couchdb/tests/couch_tests.pyo
-${PYSITELIB}/couchdb/tests/design.py
-${PYSITELIB}/couchdb/tests/design.pyc
-${PYSITELIB}/couchdb/tests/design.pyo
-${PYSITELIB}/couchdb/tests/http.py
-${PYSITELIB}/couchdb/tests/http.pyc
-${PYSITELIB}/couchdb/tests/http.pyo
-${PYSITELIB}/couchdb/tests/mapping.py
-${PYSITELIB}/couchdb/tests/mapping.pyc
-${PYSITELIB}/couchdb/tests/mapping.pyo
-${PYSITELIB}/couchdb/tests/multipart.py
-${PYSITELIB}/couchdb/tests/multipart.pyc
-${PYSITELIB}/couchdb/tests/multipart.pyo
-${PYSITELIB}/couchdb/tests/package.py
-${PYSITELIB}/couchdb/tests/package.pyc
-${PYSITELIB}/couchdb/tests/package.pyo
-${PYSITELIB}/couchdb/tests/testutil.py
-${PYSITELIB}/couchdb/tests/testutil.pyc
-${PYSITELIB}/couchdb/tests/testutil.pyo
-${PYSITELIB}/couchdb/tests/tools.py
-${PYSITELIB}/couchdb/tests/tools.pyc
-${PYSITELIB}/couchdb/tests/tools.pyo
-${PYSITELIB}/couchdb/tests/view.py
-${PYSITELIB}/couchdb/tests/view.pyc
-${PYSITELIB}/couchdb/tests/view.pyo
-${PYSITELIB}/couchdb/tools/__init__.py
-${PYSITELIB}/couchdb/tools/__init__.pyc
-${PYSITELIB}/couchdb/tools/__init__.pyo
-${PYSITELIB}/couchdb/tools/dump.py
-${PYSITELIB}/couchdb/tools/dump.pyc
-${PYSITELIB}/couchdb/tools/dump.pyo
-${PYSITELIB}/couchdb/tools/load.py
-${PYSITELIB}/couchdb/tools/load.pyc
-${PYSITELIB}/couchdb/tools/load.pyo
-${PYSITELIB}/couchdb/tools/replicate.py
-${PYSITELIB}/couchdb/tools/replicate.pyc
-${PYSITELIB}/couchdb/tools/replicate.pyo
-${PYSITELIB}/couchdb/view.py
-${PYSITELIB}/couchdb/view.pyc
-${PYSITELIB}/couchdb/view.pyo
-share/doc/py-couchdb/changes.rst
-share/doc/py-couchdb/client.rst
-share/doc/py-couchdb/getting-started.rst
-share/doc/py-couchdb/index.rst
-share/doc/py-couchdb/mapping.rst
-share/doc/py-couchdb/views.rst
