@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.3336 2022/07/12 08:31:24 adam Exp $
+$NetBSD: CHANGES-2022,v 1.3337 2022/07/12 08:59:08 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -5011,3 +5011,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated textproc/py-regex to 2022.7.9 [adam 2022-07-12]
 	Updated textproc/py-parsimonious to 0.9.0 [adam 2022-07-12]
 	Removed devel/py-chai [adam 2022-07-12]
+	Removed databases/py-couchdb [wiz 2022-07-12]
